# console-error-scanner

./: .git-blame-ignore-revs  .gitignore  LICENSE  README.de.md  README.md  bootstrap.ps1  bootstrap.sh  build-dist.bat  build-dist.sh  build.bat  compile-linux.sh  compile-macos.sh  compile-win64.ps1  console-error-scanner.spec  deployment.md  install.ps1  install.sh  pyproject.toml  run.bat  run.ps1  run.sh  setup-dev-environment.bat  setup-dev-environment.sh  setup.bat  whitelist.json
.github/workflows/: release.yml
docs/: index.html
src/console_error_scanner/: __init__.py  __main__.py  app.py  app.tcss  i18n.py
src/console_error_scanner/locale/: de.json  en.json
src/console_error_scanner/models/: __init__.py  history.py  scan_result.py  settings.py  sitemap.py  whitelist.py
src/console_error_scanner/screens/: __init__.py  about.py  diet_advisor.py  error_detail.py  history.py  scan_summary.py  settings.py  top_errors.py  whitelist.py
src/console_error_scanner/services/: __init__.py  image_clipboard.py  preview_service.py  rate_limit.py  reporter.py  scanner.py  site_score.py
src/console_error_scanner/widgets/: __init__.py  bar_chart.py  error_detail_view.py  preview_panel.py  results_table.py  stats_panel.py  summary_panel.py
tests/: test_rate_limit.py  test_reporter.py  test_robots.py  test_safe_defaults.py  test_scan_rate_limit.py
