[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "console-error-scanner"
version = "1.10.0"
description = "TUI tool to scan websites for console errors and HTTP errors"
requires-python = ">=3.12"
dependencies = [
    "textual>=0.40",
    "rich>=13.0",
    "playwright>=1.40",
    "httpx>=0.25",
    "Pillow>=10.0",
    "textual-image[textual]>=0.12.0",
    "textual-themes @ git+https://github.com/michaelblaess/textual-themes.git",
    "textual-widgets @ git+https://github.com/michaelblaess/textual-widgets.git",
    "textual-fspicker>=0.4.0",
    "pywin32>=308; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.5",
    "mypy>=1.8",
    "poethepoet>=0.29",
    "ruff>=0.3",
]

[project.scripts]
console-error-scanner = "console_error_scanner.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
console_error_scanner = ["locale/*.json"]

[tool.poe.tasks]
run = { cmd = "python -m console_error_scanner", help = "Startet console-error-scanner" }
test = { cmd = "pytest", help = "Tests sequentiell (schnell bei Unit-Tests)" }
test-parallel = { cmd = "pytest -n auto", help = "Tests parallel (fuer langsame Test-Suiten)" }
cov = { cmd = "pytest --cov=console_error_scanner --cov-report=term-missing", help = "Tests + Coverage" }
typecheck = { cmd = "mypy src", help = "mypy strict ueber src/" }
lint = { cmd = "ruff check .", help = "Ruff Linting" }
fmt = { cmd = "ruff format .", help = "Ruff Formatting" }
fix = { cmd = "ruff check --fix .", help = "Ruff Auto-Fix" }

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "ASYNC"]
ignore = ["E501", "ASYNC109", "ASYNC240", "E402", "N806"]
